# tainhacvavideotuyoutube

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
static/: app.js  style.css
templates/: index.html
